Changelog for plone.app.contentrules

    (name of developer listed in brackets)

plone.app.contentrules - 1.1.6

    - Modified a macro call in contentrules-pageform.pt for forwards
      compatibility with Zope 2.12.
      [davisagli]

    - Fixed a SyntaxError in test_configuration.
      [hannosch]

plone.app.contentrules - 1.1.1 (April 18th, 2008)

    - Added proper unicode handling to mail action. This closes
      http://dev.plone.org/plone/ticket/7650.
      [hannosch]

    - Made the GS import handlers more tolerant in case the storage utility
      is missing. This closes http://dev.plone.org/plone/ticket/8133.
      [hannosch]

    - Changed wording on the IMailAction interface to remove a reference to a
      newly created item, since the action can be used on existing content
      as well. This closes http://dev.plone.org/plone/ticket/8225.
      [hannosch]

plone.app.contentrules - 1.1 (April 20th, 2008)

    - Ensure that if a contentrules.xml step is imported twice, conditions and
      actions are not duplicated.
      Fixes http://dev.plone.org/plone/ticket/8027
      [optilude]

    - Fix invalid leading space in all 'Up to Site Setup' links.
      [wichert]

plone.app.contentrules - 1.1.0a1

    - Fixed a small bug related to getTypeInfo() being acquired.
      http://dev.plone.org/plone/ticket/7385
      [optilude]

    - Fixed bug causing content rule actions/conditions to not be properly
      saved.
      http://dev.plone.org/plone/ticket/7909
      [optilude]

    - Merge PLIP 204 - GenericSetup support. A contentrules.xml file can now
      be used to import and export rule definitions and assignments.
      [optilude]

plone.app.contentrules - 1.0.5

    - Made absolute_url() work properly on the custom adding views. This is
      necessary for the <base /> URL to be set correctly.
      [optilude]

    - Made absolute_url() work across the namespace traversal adapters for